# tw-scrapper

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  companies.yaml  docker-compose.yml  job_stage_1.py  job_stage_3.py  pipeline.yaml  prefect-worker.dockerfile  prefect.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  selector_tester.py
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: pipeline.yaml  stages.yaml
docker/: .env.example  dashboard.dockerfile  docker-compose.yml  pipeline.dockerfile  prefect-server.dockerfile  prefect-worker.dockerfile  streamlit-dashboard.dockerfile
examples/: basic_usage.py  run_stage_1_flow.py
input/: companies.json  companies.yaml
input/prompts/: job_skills_responsibilities.md  job_technologies.md  new_technology.md
mongo/: 01-indexes.js
mongo-init/: 01-indexes.js
parsers/: __init__.py  base.py  factory.py  instances.py  models.py
pipeline/: README.md  __init__.py  main.py
pipeline/core/: __init__.py  config.py  mappers.py  models.py  pipeline.py
pipeline/data/: __init__.py  config.py
pipeline/flows/: __init__.py  main_pipeline_flow.py  stage_1_flow.py  stage_2_flow.py  stage_3_flow.py  stage_4_flow.py  stage_5_flow.py  utils.py
pipeline/parsers/: base.py  factory.py  instances.py
pipeline/persistence/: README.md  __init__.py  config.py  database.py  mappers.py  models.py  repositories.py
pipeline/services/: __init__.py  database_service.py  extraction_service.py  file_service.py  html_service.py  job_data_service.py  job_extraction_service.py  job_metrics_service.py  openai_service.py  web_extraction_service.py
pipeline/stages/: __init__.py  stage_1.py  stage_2.py  stage_3.py  stage_4.py
pipeline/tasks/: __init__.py  company_processing.py  job_processing.py  stage_1_task.py  stage_2_task.py  stage_3_task.py  stage_4_task.py  utils.py
pipeline/utils/: __init__.py  exceptions.py  timezone.py
prompts/: stage_1_jobs.md  stage_2_details.md  stage_3_skills.md
scripts/: dev-setup.sh  job_stage_1.py  job_stage_2.py  job_stage_3.py  job_stage_4.py  start-dashboard.sh  start-pipeline.sh  start-worker.sh
services/: README.md  __init__.py  extraction.py
src/: __init__.py
src/core/: __init__.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  config.py  controller.py
src/pipeline/: __init__.py  main.py
src/services/: __init__.py  company_service.py  data_service.py  job_data_service.py  job_metrics_service.py  metrics_service.py  openai_service.py  web_extraction_service.py
src/utils/: __init__.py  timezone.py
tools/: README.md  __init__.py  config.json  selector.py  selector_tester.py
web_parser/: __init__.py  factory.py  models.py
(+101 files in other folders)
